[gd_scene load_steps=14 format=2]

[ext_resource path="res://mainmenu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Player.png" type="Texture" id=2]
[ext_resource path="res://mainmenu/TEXT.tres" type="Theme" id=3]
[ext_resource path="res://sprites/enemey_smart.png" type="Texture" id=4]
[ext_resource path="res://sprites/ak.png" type="Texture" id=5]
[ext_resource path="res://sprites/320140.png" type="Texture" id=6]
[ext_resource path="res://sprites/playbuttonhover.png" type="Texture" id=7]
[ext_resource path="res://sprites/375.png" type="Texture" id=8]
[ext_resource path="res://sprites/18392.png" type="Texture" id=9]
[ext_resource path="res://sprites/creditsselct.png" type="Texture" id=10]
[ext_resource path="res://sprites/playselect.png" type="Texture" id=11]
[ext_resource path="res://sprites/optionsselect.png" type="Texture" id=12]
[ext_resource path="res://sprites/exitselect.png" type="Texture" id=13]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -536.0
margin_bottom = 71.0
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0.054902, 1, 0, 1 )
tab_size = 10
text = "TESTING BUILD"

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.298039, 0.196078, 0.196078, 1 )
position = Vector2( 528, 332 )
scale = Vector2( 65.875, 41.5 )
z_index = -1
texture = ExtResource( 2 )

[node name="Title" type="RichTextLabel" parent="."]
margin_right = 336.0
margin_bottom = 146.0
rect_min_size = Vector2( 10, 0 )
theme = ExtResource( 3 )
tab_size = 10
text = "The Complex
"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 322, 261 )
scale = Vector2( 8.75, 8.75 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Sprite"]
position = Vector2( 14.1715, 5.25708 )
scale = Vector2( 0.0196326, 0.0196326 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 49.3714, 0.228571 )
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.0
alignment = 1

[node name="StartButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 250.0
margin_right = 378.0
margin_bottom = 136.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 11 )

[node name="OptionsButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 382.0
margin_right = 510.0
margin_bottom = 136.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 12 )

[node name="CreditsButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 642.0
margin_bottom = 136.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 10 )

[node name="QuitButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 646.0
margin_right = 774.0
margin_bottom = 136.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 13 )

[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
